[package]
name = "fastreach-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
fastreach-core = { path = "../fastreach-core" }
geo = "0.26"
geojson = "0.24"
lazy_static = "1.4"
memmap2 = "0.7"
serde = "1"
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
