[package]
name = "fastreach-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
fastreach-core = { path = "../fastreach-core" }
geo = "0.28"
geojson = "0.24"
lazy_static = "1.5"
memmap2 = "0.9"
serde = "1"
serde_derive = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
