[package]
name = "fastreach-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
byteorder = "1.5"
fnv = "1.0"
geo = "0.27"
geo-clipper = "0.8.0"
memmap2 = "0.9"
num-traits = "0.2"
rstar = "0.11"
rudac = "0.8"
smallvec = "1.12"

[dev-dependencies]
approx = "0.5"
